[package]
name = "minesweeper"
version = "0.1.0"
edition = "2021"

[dependencies]
win32console = "0.1.5"
device_query = "1.0.0"
active-win-pos-rs = "0.8"
rand="0.8.5"
wincolor="1.0.3"


[dependencies.windows-sys]
version = "0.59"
features = [
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
]